# ipybox

./: .dockerignore  .gitignore  404.html  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  GEMINI.md  README.md  docker-build.sh  docker-entrypoint.sh  errors.txt  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  server.json  setup_uv.sh  sitemap.xml  tasks.py
.claude/: settings.json
.claude-plugin/: marketplace.json
AGENTS/: index.html
CLAUDE/: index.html
apigen/: index.html  index.md
architecture/: index.html  index.md
ccplugin/: index.html  index.md
codeexec/: index.html  index.md
docker/: index.html
docs/: apigen.md  architecture.excalidraw  architecture.md  ccplugin.md  codeexec.md  codegen.md  docker.md  examples.md  index.md  installation.md  mcp-client.md  mcp-server.md  mcpserver.md  notes.md  quickstart.md  sandbox.md  usage.md
examples/: 01_basic_usage.py  02_state_management.py  03_output_streaming.py  04_installing_dependencies.py  05_creating_plots.py  06_bind_mounts.py  07_environment_variables.py  08_manual_lifecycle.py  09_remote_docker_host.py  10_mcp_support.py  10b_mcp_streamable_http.py  11_file_operations.py  12_firewall_activation.py  apigen.py  client_approve.py  client_code.py  client_concurrent.py  client_env.py  client_exec.py  client_facade.py  client_facade_1.py  client_facade_2.py  client_gen.py  client_high.py  client_http.py  client_low.py  client_mcp.py  client_package.py  client_plot.py  client_sdk.py  client_stream.py  codegen.py  codexec.py  index.html  intercept.py  mcp_generate.py  mcp_sandbox.py  mcp_server.py  quickstart.py  sandbox-fetch-mcp.json  (+2 more)
installation/: index.html  index.md
internal/: index.html
ipybox/: __init__.py  __main__.py  code_exec.py  container.py  executor.py  facade.py  mcp_apigen.py  mcp_client.py  mcp_server.py  vars.py
mcp-client/: index.html
mcp-server/: index.html
mcpserver/: index.html  index.md
quickstart/: index.html  index.md
sandbox/: index.html  index.md
tests/: AGENTS.md  (+1 more)
(+107 files in other folders)
